# maricraft

./: Cargo.toml  README.md
src/: main.rs  mesh.rs  physics.rs
