[package]
name = "maricraft"
version = "0.0.0"
edition = "2021"

[dependencies]
avian3d = { git = "https://github.com/mizz1e/avian", version = "0.2.0" }
bevy = { version = "0.15.0", default-features = false, features = [
    "bevy_mesh_picking_backend",
    "bevy_pbr",
    "bevy_picking",
    "bevy_state",
    "bevy_ui",
    "bevy_window",
    "bevy_winit",
    "multi_threaded",
    "png",
    "tonemapping_luts",
    "wayland",
] }
leafwing-input-manager = { version = "0.16.0", default-features = false, features = [
    "gamepad",
    "keyboard",
    "mouse",
] }

[profile.dev]
opt-level = 2
strip = "symbols"

[profile.dev.package."*"]
opt-level = 3
